Add NavigationBar and SearchForm

--- a/atcoder-problems-frontend/index.html
+++ b/atcoder-problems-frontend/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <title>Hello React!</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
 </head>
 
 <body>
-    <div id="example"></div>
+    <div id="root"></div>
 
     <!-- Dependencies -->
     <script src="./node_modules/react/umd/react.development.js"></script>
