add user page pie charts

--- a/atcoder-problems-frontend/index.html
+++ b/atcoder-problems-frontend/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Hello React!</title>
+    <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="https://npmcdn.com/react-bootstrap-table/dist/react-bootstrap-table-all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
