--- a/atcoder-problems-scraper/assets/abc107_submissions.html
+++ b/atcoder-problems-scraper/assets/abc107_submissions.html
@@ -602,7 +602,7 @@
 						
 						<td class="no-break"><time class='fixtime fixtime-second'>2019-03-18 21:14:16+0900</time></td>
 						<td><a href='/contests/abc107/tasks/abc107_a'>A - Train</a></td>
-						<td><a href='/users/nan'>nan</a> <a href='/contests/abc107/submissions?f.User=nan'><span class='glyphicon glyphicon-search black' aria-hidden='true' data-toggle='tooltip' title='view nan's submissions'></span></a></td>
+						<td><a href='/users/nan'>なん</a> <a href='/contests/abc107/submissions?f.User=nan'><span class='glyphicon glyphicon-search black' aria-hidden='true' data-toggle='tooltip' title='view nan's submissions'></span></a></td>
 						<td>Python3 (3.4.3)</td>
 						<td class="text-right submission-score" data-id="4624052">100</td>
 						<td class="text-right">48 Byte</td>
@@ -617,7 +617,7 @@
 						<td class="no-break"><time class='fixtime fixtime-second'>2019-03-18 19:27:46+0900</time></td>
 						<td><a href='/contests/abc107/tasks/arc101_a'>C - Candles</a></td>
 						<td><a href='/users/tinsep19'>tinsep19</a> <a href='/contests/abc107/submissions?f.User=tinsep19'><span class='glyphicon glyphicon-search black' aria-hidden='true' data-toggle='tooltip' title='view tinsep19's submissions'></span></a></td>
-						<td>Ruby (2.3.3)</td>
+						<td></td>
 						<td class="text-right submission-score" data-id="4623130">300</td>
 						<td class="text-right">301 Byte</td>
 						<td class='text-center'><span class='label label-success' aria-hidden='true' data-toggle='tooltip' data-placement='top' title="Accepted">AC</span></td><td class='text-right'>61 ms</td><td class='text-right'>8452 KB</td>
